# lantern

./: .gitignore  CMakeLists.txt  README.md  build.gradle  configure.cmd  configure.sh  msvc.bat  settings.gradle
SDL2/android-project/src/org/libsdl/app/: SDLActivity.java
SDL2/include/: SDL_config.h
android-studio/: build.gradle  settings.gradle
android-studio/app/: build.gradle
android-studio/app/src/main/: AndroidManifest.xml
android-studio/empty_app/: build.gradle
android-studio/empty_app/src/main/: AndroidManifest.xml
android-studio/empty_app/src/main/java/org/libsdl/app/: SDLActivity.java
android-studio/empty_app/src/main/res/values/: strings.xml
android-studio/gradle/wrapper/: gradle-wrapper.properties
android-studio/rasterized_triangle_app/: build.gradle
android-studio/rasterized_triangle_app/src/main/: AndroidManifest.xml
android-studio/rasterized_triangle_app/src/main/java/org/libsdl/: libsdlActivity.java
android-studio/rasterized_triangle_app/src/main/java/org/libsdl/app/: SDLActivity.java
android/include/: androidApp.h  gles1x.h  graphics.h  internalApp.h  misc.h
android/src/: androidApp.cpp  gles1x.cpp  graphics.cpp  internalApp.cpp  misc.cpp
buildSrc/src/main/groovy/: KeyTool.groovy
cmake/: AndroidMacros.cmake  FindSDL2IMAGE.cmake
examples/: AndroidManifest.xml  misc.c
examples/empty_app/: AndroidManifest.xml  build.gradle  main.cpp
examples/empty_app/org/lantern/: EmptyAppNativeActivity.java
examples/empty_app/org/libsdl/: libsdlActivity.java
examples/empty_app/org/libsdl/app/: SDLActivity.java
examples/empty_app/src/main/: AndroidManifest.xml
examples/empty_app/src/main/java/org/lantern/: EmptyAppActivity.java
examples/empty_app/src/main/java/org/lantern/examples/: EmptyApp.java  EmptyAppActivity.java  EmptyAppHolder.java  EmptyAppRenderer.java  Holder.java
examples/empty_app/src/main/jni/: empty_app.h  org_lantern_examples_EmptyApp.cpp  org_lantern_examples_EmptyApp.h
examples/empty_app/src/main/res/layout/: main.xml
examples/empty_app/src/main/res/values/: strings.xml
examples/rasterized_triangle_app/: AndroidManifest.xml  SDL_android_main.c  build.gradle  main.cpp
examples/rasterized_triangle_app/org/lantern/: RasterizedTriangleAppNativeActivity.java
examples/rasterized_triangle_app/org/libsdl/: libsdlActivity.java
examples/rasterized_triangle_app/org/libsdl/app/: SDLActivity.java
examples/rasterized_triangle_app/src/main/: AndroidManifest.xml
examples/rasterized_triangle_app/src/main/java/org/lantern/examples/: RasterizedTriangleApp.java  RasterizedTriangleAppActivity.java  RasterizedTriangleAppHolder.java  RasterizedTriangleAppRenderer.java
examples/rasterized_triangle_app/src/main/jni/: org_lantern_examples_RasterizedTriangleApp.cpp  org_lantern_examples_RasterizedTriangleApp.h  rasterized_triangle_app.h
examples/rasterized_triangle_app/src/main/res/values/: strings.xml
examples/rotating_car_app/: main.cpp
freetype/config/: ftoption.h
gradle/wrapper/: gradle-wrapper.properties
lantern/: build.gradle
lantern/include/: app.h  application.h  color_shader.h  font.h  gdi_application.h  geometry_stage.h  merging_stage.h  obj_import.h  renderer.h  texture.h  texture_shader.h  ui_label.h  ui_label_shader.h  vector2.h  vector3.h  win32_application.h
lantern/include/rendering/: merger.h  texture.h
lantern/java/org/lantern/: Lantern.java
lantern/jni/: Android.mk  Application.mk  empty_app.h  org_lantern_Lantern.cpp  org_lantern_Lantern.h
lantern/src/: app.cpp  application.cpp  color.cpp  font.cpp  gdi_application.cpp  obj_import.cpp  texture.cpp  ui_label.cpp  win32_application.cpp
lantern/src/main/: AndroidManifest.xml
lantern/src/main/java/org/lantern/: Lantern.java
lantern/src/main/jni/: Android.mk  Application.mk  AssetManager.cpp  AssetManager.h  InputStream.cpp  InputStream.h  logging.c  logging.h  org_lantern_Lantern.cpp  org_lantern_Lantern.h
lantern/src/rendering/: texture.cpp
lantern/src/rendering/geometry/: obj_import.cpp
tests/src/: main.cpp  pipeline.cpp
